fix: Allow all CORS origins and permit OPTIONS preflight requests
- Use wildcard pattern for all origins (temporary for debugging)
- Explicitly permit all OPTIONS requests before other security rules
- This fixes 'Redirect is not allowed for preflight request' error